# indian-company-drafting-mcpb

./: README.md  SECURITY.md  manifest.json  pyproject.toml
SAMPLE-CASES/: README.md
agents/drafter/: drafter.md
server/: main.py
skills/_company_drafting_base/: SKILL.md
skills/_drafting_common/: SKILL.md
